add: styles in main

--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -66,8 +66,8 @@
             </p>
 
             <a class="button stroke smoothscroll" href="#about" title=""
-              >More About Me</a
-            >
+              >More About Me <i class="fa-solid fa-chevron-down"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -1065,7 +1065,7 @@
       <div id="loader"></div>
     </div>
   </body>
-  
+
   <script
     src="https://kit.fontawesome.com/e59e0b10fd.js"
     crossorigin="anonymous"
