add: styles in main

--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -12,7 +12,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/vendor.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
   </head>
 
@@ -25,7 +27,7 @@
           <a class="menu-toggle" href="#"><span>Menu</span></a>
 
           <div class="logo">
-            <a href="index.html">MENU</a>
+            <a href="index.html">KARDS</a>
           </div>
 
           <nav id="main-nav-wrap">
@@ -46,13 +48,19 @@
               <li>
                 <a class="smoothscroll" href="#contact" title="">Contact</a>
               </li>
+              <li><a href="styles.html" title="">Style Demo</a></li>
             </ul>
           </nav>
         </div>
+        <!-- /top-bar -->
       </div>
+      <!-- /row -->
     </header>
+    <!-- /header -->
 
-    <section class="intro">
+    <!-- intro section
+   ================================================== -->
+    <section id="intro">
       <div class="intro-overlay"></div>
 
       <div class="intro-content">
@@ -62,32 +70,41 @@
             <h1>I'm Omar Pérez.</h1>
 
             <p class="intro-position">
-              <span>| Front-end developer | Backend-end developer |</span>
+              <span>Front-end Developer</span>
+              <span>Back-end Developer</span>
             </p>
 
             <a class="button stroke smoothscroll" href="#about" title=""
-              >More About Me <i class="fa-solid fa-chevron-down"></i
-            ></a>
+              >More About Me</a
+            >
           </div>
         </div>
       </div>
+      <!-- /intro-content -->
 
       <ul class="intro-social">
         <li>
-          <a href="https://www.linkedin.com/in/omar-perezr/"
-            ><i class="fa fa-facebook"></i
-          ></a>
+          <a href="#"><i class="fa fa-facebook"></i></a>
         </li>
         <li>
-          <a href="https://twitter.com/https://twitter.com/@omar_perez_dev"
-            ><i class="fa fa-twitter"></i
-          ></a>
+          <a href="#"><i class="fa fa-behance"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-dribbble"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-instagram"></i></a>
         </li>
       </ul>
+      <!-- /intro-social -->
     </section>
+    <!-- /intro -->
 
-    <!-- /section-intro -->
-
+    <!-- about section
+   ================================================== -->
     <section id="about">
       <div class="row section-intro">
         <div class="col-twelve">
@@ -106,6 +123,7 @@
           </div>
         </div>
       </div>
+      <!-- /section-intro -->
 
       <div class="row about-content">
         <div class="col-six tab-full">
@@ -160,11 +178,11 @@
             </li>
             <li>
               <div class="progress percent70"><span>70%</span></div>
-              <strong>Javascript</strong>
+              <strong>JQuery</strong>
             </li>
             <li>
-              <div class="progress percent95"><span>90%</span></div>
-              <strong>React</strong>
+              <div class="progress percent95"><span>95%</span></div>
+              <strong>PHP</strong>
             </li>
             <li>
               <div class="progress percent75"><span>75%</span></div>
@@ -1064,10 +1082,13 @@
     <div id="preloader">
       <div id="loader"></div>
     </div>
-  </body>
 
-  <script
-    src="https://kit.fontawesome.com/e59e0b10fd.js"
-    crossorigin="anonymous"
-  ></script>
+    <!-- Java Script
+   ================================================== -->
+    <script
+      src="https://kit.fontawesome.com/e59e0b10fd.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
