--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -14,7 +14,6 @@
 
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/vendor.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
   </head>
 
@@ -74,7 +73,7 @@
               <span>Back-end Developer</span>
             </p>
 
-            <a class="button stroke smoothscroll" href="#about" title=""
+            <a class="button stroke-white smoothscroll" href="#about" title=""
               >More About Me</a
             >
           </div>
@@ -198,7 +197,7 @@
           <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
             >Hire Me</a
           >
-          <a href="#" title="Download CV" class="button button-primary"
+          <a href="#" title="Download CV" class="button button-black"
             >Download CV</a
           >
         </div>
@@ -381,19 +380,14 @@
                 </p>
               </div>
             </div>
-            <!-- /timeline-block -->
           </div>
-          <!-- /timeline-wrap -->
         </div>
-        <!-- /col-twelve -->
       </div>
-      <!-- /resume-timeline -->
     </section>
-    <!-- /features -->
 
     <!-- Portfolio Section
    ================================================== -->
-    <section id="portfolio">
+    <section class="portfolio">
       <div class="row section-intro">
         <div class="col-twelve">
           <h5>Portfolio</h5>
@@ -407,287 +401,112 @@
         </div>
       </div>
       <!-- /section-intro-->
-
-      <div class="row portfolio-content">
-        <div class="col-twelve">
+      <article class="portfolio-container">
+        <div class="portfolio-content">
           <!-- portfolio-wrapper -->
-          <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/liberty.jpg" alt="Liberty" />
-                <a href="#modal-01" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Liberty</h3>
-                      <span class="folio-types"> Graphic Design </span>
-                    </div>
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/liberty.jpg" alt="Liberty" />
+              <a href="#modal-01" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Liberty</h3>
+                    <span class="folio-types"> Graphic Design </span>
                   </div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
-                <a href="#modal-02" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Shutterbug</h3>
-                      <span class="folio-types"> Web Design </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/clouds.jpg" alt="Clouds" />
-                <a href="#modal-03" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Clouds</h3>
-                      <span class="folio-types"> Web Design </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/beetle.jpg" alt="Beetle" />
-                <a href="#modal-04" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Beetle</h3>
-                      <span class="folio-types"> Branding </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse" />
-                <a href="#modal-05" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Lighthouse</h3>
-                      <span class="folio-types"> Web Development </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/salad.jpg" alt="Salad" />
-                <a href="#modal-06" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Salad</h3>
-                      <span class="folio-types"> Branding </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <!-- modal popups - begin
-	            ============================================================= -->
-            <div id="modal-01" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Liberty</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Development</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-01 -->
-
-            <div id="modal-02" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Shutterbug</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Design</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-02 -->
-
-            <div id="modal-03" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Clouds</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Design</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-03 -->
-
-            <div id="modal-04" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Beetle</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-04 -->
-
-            <div id="modal-05" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Lighthouse</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Development</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-05 -->
-
-            <div id="modal-06" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-salad.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Salad</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-06 -->
-
-            <!-- modal popups - end
-	            ============================================================= -->
           </div>
-          <!-- /portfolio-wrapper -->
-        </div>
-        <!-- /twelve -->
-      </div>
-      <!-- /portfolio-content -->
-    </section>
-    <!-- /portfolio -->
 
-    <!-- CTA Section
-   ================================================== -->
-    <section id="cta" class="grey-section">
-      <div class="row cta-content">
-        <div class="col-twelve section-ads">
-          <h2 class="h01">
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              >Styleshout Recommends Dreamhost.</a
-            >
-          </h2>
+          <!-- /folio-item -->
 
-          <p class="lead">
-            Looking for an awesome and reliable webhosting? Try
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              ><span>DreamHost</span></a
-            >. Get <span>$50 off</span> when you sign up with the promocode
-            <span>styleshout</span>.
-            <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-          </p>
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img
+                class="img-beetle"
+                src="images/portfolio/beetle.jpg"
+                alt="Beetle"
+              />
+              <a href="#modal-04" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Beetle</h3>
+                    <span class="folio-types"> Branding </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
 
-          <div class="action">
-            <a
-              class="button button-primary large"
-              href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              >Sign Up Now</a
-            >
+          <!-- /folio-item -->
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/salad.jpg" alt="Salad" />
+              <a href="#modal-06" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Salad</h3>
+                    <span class="folio-types"> Branding </span>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- /cta-content -->
+
+        <!-- /folio-item -->
+        <div class="portfolio-content">
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
+              <a href="#modal-02" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Shutterbug</h3>
+                    <span class="folio-types"> Web Design </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- /folio-item -->
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/clouds.jpg" alt="Clouds" />
+              <a href="#modal-03" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Clouds</h3>
+                    <span class="folio-types"> Web Design </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- /folio-item -->
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse" />
+              <a href="#modal-05" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Lighthouse</h3>
+                    <span class="folio-types"> Web Development </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </article>
     </section>
-    <!-- /cta -->
 
     <!-- services Section
-   ================================================== -->
+      ================================================== -->
     <section id="services">
       <div class="overlay"></div>
 
@@ -817,15 +636,11 @@
 
     <!-- stats Section
    ================================================== -->
-    <section id="stats" class="count-up">
-      <div class="row">
-        <div class="col-twelve">
-          <div
-            class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list"
-          >
-            <div class="bgrid stat">
+    <section class="stats" class="count-up">
+
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-pencil-ruler"></i>
+                <i class="fa-solid fa-laptop"></i>
               </div>
 
               <h3 class="stat-count">1500</h3>
@@ -834,9 +649,9 @@
             </div>
             <!-- /stat -->
 
-            <div class="bgrid stat">
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-users"></i>
+                <i class="fa-solid fa-people-group"></i>
               </div>
 
               <h3 class="stat-count">900</h3>
@@ -845,9 +660,9 @@
             </div>
             <!-- /stat -->
 
-            <div class="bgrid stat">
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-badge"></i>
+                <i class="fa-solid fa-medal"></i>
               </div>
 
               <h3 class="stat-count">200</h3>
@@ -856,9 +671,9 @@
             </div>
             <!-- /stat -->
 
-            <div class="bgrid stat">
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-light-bulb"></i>
+                <i class="fa-brands fa-medapps"></i>
               </div>
 
               <h3 class="stat-count">120</h3>
@@ -867,9 +682,9 @@
             </div>
             <!-- /stat -->
 
-            <div class="bgrid stat">
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-cup"></i>
+                <i class="fa-solid fa-mug-hot"></i>
               </div>
 
               <h3 class="stat-count">1500</h3>
@@ -878,24 +693,17 @@
             </div>
             <!-- /stat -->
 
-            <div class="bgrid stat">
+            <div class="bgrid stat stat-item">
               <div class="icon-part">
-                <i class="icon-clock"></i>
+                <i class="fa-regular fa-clock"></i>
               </div>
 
               <h3 class="stat-count">7200</h3>
 
               <h5 class="stat-title">Hours</h5>
             </div>
-            <!-- /stat -->
           </div>
-          <!-- /stats-list -->
-        </div>
-        <!-- /twelve -->
-      </div>
-      <!-- /row -->
     </section>
-    <!-- /stats -->
 
     <!-- contact
    ================================================== -->
